--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://Vinay55-creator.github.io/ToDoApp/",
   "name": "todoapp",
   "private": true,
   "version": "0.0.0",
@@ -13,7 +12,8 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
